@@ -517,6 +517,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-8142. DistributedFileSystem encryption zone commands should resolve
     relative paths. (Rakesh R via wang)
 
+    HDFS-7863. Missing description of some methods and parameters in javadoc of
+    FSDirDeleteOp. (Brahma Reddy Battula via ozawa)
+
 Release 2.7.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
